WebCore/rendering/RenderReplica.cpp
@@ -72,7 +72,7 @@ void RenderReplica::paint(PaintInfo& paintInfo, int tx, int ty)
         // computing using the wrong rootLayer
         layer()->parent()->paintLayer(layer()->transform() ? layer()->parent() : layer()->enclosingTransformedAncestor(),
                                       paintInfo.context, paintInfo.rect,
-                                      true, PaintRestrictionNone, 0,
+                                      true, PaintRestrictionNone, 0, 0,
                                       true,     // appliedTransform
                                       true);    // temporaryClipRects
     else if (paintInfo.phase == PaintPhaseMask)
