WebCore/rendering/RenderWidget.h
@@ -24,13 +24,14 @@
 #ifndef RenderWidget_h
 #define RenderWidget_h
 
+#include "OverlapTestRequestClient.h"
 #include "RenderReplaced.h"
 
 namespace WebCore {
 
 class Widget;
 
-class RenderWidget : public RenderReplaced {
+class RenderWidget : public RenderReplaced, private OverlapTestRequestClient {
 public:
     RenderWidget(Node*);
     virtual ~RenderWidget();
@@ -63,6 +64,9 @@ private:
     void setWidgetGeometry(const IntRect&);
 
     virtual void deleteWidget();
+
+    // OverlapTestRequestClient
+    virtual void setOverlapTestResult(bool);
 
 protected:
     Widget* m_widget;
